--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 #bloc-page{
-    width: 80%;
+    width: 70%;
     margin: auto;
 }
 #logo img{
@@ -137,7 +137,7 @@ article{
     border-width: thin;
     border-radius: 1.5em;
     background-color: #F2F2F2;
-    padding: 2em 2em 4em 2em;
+    padding: 0.1em 2em 6em 2em;
     width: 55em;
 }
 #hebergement{
@@ -158,6 +158,7 @@ article{
     padding: 5px;
     border: none;
     border-radius: 1.7em;
+    box-shadow: 1px 1px 4px grey;
 }
 
 .mer{
@@ -166,6 +167,7 @@ article{
     border: none;
     border-radius: 1.7em;
     margin-bottom: 6%;
+    box-shadow: 1px 1px 4px grey;
 }
 
 #content{
@@ -203,7 +205,7 @@ aside{
     border-width: thin;
     border-radius: 1.5em;
     background-color: #F2F2F2;
-    padding: 2em 2em 4em 2em;
+    padding: 0.1em 2em 1em 2em;
     width: 55em;
 }
 aside img{
@@ -212,6 +214,7 @@ aside img{
     width: 10em;
     height: 10em;
     object-fit: cover;
+    
 }
 #populaires{
     font-size: 1.5em;
@@ -231,20 +234,30 @@ aside img{
     border-radius: 1.7em;
     padding: 0px 0px 1.1% 1.7%;
     margin-bottom: 5%; /*à changer à la fin*/
+    box-shadow: 1px 1px 4px rgb(175, 171, 171);
 }
 .soleil img{
     padding-top: 6.5px;
     float: left;
 }
 .bol{
+    display: block;
     font-weight: bold;
-    font-size: 1.1em;
+    font-size: 1.3em;
+    padding-left: 49%;
+    margin-bottom: 2%;    
+}
+.nuit{
+    padding-left: 5%;
 }
 .popucontent{
-    text-align: center;
-    padding-top: 10%;
+    padding-top: 6%;
     padding-right: 13%;
 }
 .popucontent i{
     padding-top: 14%;
+}
+.star{
+    margin-left: 50%;
+    padding-top: 3.5%;
 }
