--- a/style.css
+++ b/style.css
@@ -33,10 +33,17 @@ ul.puce li{
 }
 .puce a{
     text-decoration: none;
-    color: #0065FC;
 }
-.puce a:visited{
+.bcolor{
     color: black;
+    padding-top: 2.63em;
+}
+.hov a:hover{
+    color: #0065FC;
+    border-top: solid;
+}
+#ins{
+    color: #0065FC;
 }
 #titre_principal h1{
     font-size: 1.6em;
@@ -63,7 +70,7 @@ ul.puce li{
         
 }
 .search i{
-    padding: 1%;
+    padding: 1.1%;
     margin-right: -0.3%;
     background-color: #F2F2F2;
     border-bottom-left-radius: 10px;
@@ -187,7 +194,7 @@ article{
 }
 
 #grey i{
-    color: gray;
+    color: #e3e3e3;
 }
 .txt{
     padding-left: 6%;
@@ -319,13 +326,13 @@ aside img{
     height: 10em;
 }
 
-.petit {
+.dame {
     border-radius: 1.5em;
     box-shadow: 1px 1px 4px rgb(175, 171, 171);
-    margin-bottom: 18%;
+    margin-bottom: 20%;
     padding-bottom: 5%;
 }
-.petit2 {
+.longchamp {
     border-radius: 1.5em;
     box-shadow: 1px 1px 4px rgb(175, 171, 171);
     padding-bottom: 5%;
@@ -342,17 +349,15 @@ footer{
     display: flex;
     margin-left: 6%;
 }
-.text2 {
+.footerText {
     margin-left: 16%;
 }
-.text3 {
-    margin-left: 16%;
-}
+
 @media all and (max-width: 1024px)
 {
-    #bloc-page
-    {
-        width: 40%;
+    #bloc-page{
+        width: 100%;
+        margin: 0;
     }
     nav ul{
         flex-direction: column;
@@ -379,8 +384,6 @@ footer{
     #pic{
         border-radius: 1.5em;
         box-shadow: 1px 1px 4px rgb(175, 171, 171);
-     
-
     }
     #fort{
         margin-bottom: 0;
@@ -392,4 +395,17 @@ footer{
     .mer{
         margin-bottom: 0;
     }
+    article{
+        width: 95%;
+        padding: 0;
+        background-color: #ffffff;
+        margin: auto;
+    }
+    .section1 img{
+        width: 56.5em;
+        height: 20em;
+        border-top-left-radius: 1.7em;
+        border-top-right-radius: 1.7em;
+       }
+
 }
