--- a/style.css
+++ b/style.css
@@ -548,6 +548,7 @@ footer{
     }
     #log1{
         font-size: 14.5px;
+        padding-left: 2%;
     }
     .fa-info:before {
         content: "\f129";
