--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ ul.puce li{
 .search {
     padding-top: 2.2%;  
 }
-#test{
+#mars{
     border-top: solid;
     border-bottom: solid;
     border-width: thin;
@@ -491,9 +491,10 @@ footer{
     .fas.fa-map-marker-alt{
         font-size: 190%;
     }
-    #test{
+    #mars{
         padding: 3.5% 10% 2.3% 1%;
         border-width: thick;
+        font-size: 0.9em;
     }
     .search #rech {
         font-size: 0;
@@ -509,9 +510,6 @@ footer{
     .search #rech {
         padding: 0;
         background-color: white;
-    }
-    #test{
-        font-size: 0.9em;
     }
     .filtre {
         padding-top: 7%;
