--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 #bloc-page{
-    width: 78%;
+    width: 90rem;
     margin: auto;
 }
 #logo {
@@ -147,46 +147,55 @@ ul.puce li{
     padding: 0.4em 0.8em 0.4em 0.8em;
 }
 .allm{
-    display: flex;
-    margin-bottom: 5%;
+    display: grid;
+    column-gap: 2rem;
+    grid-template-columns: 6fr 3fr;
 
 }
 
-article{
+.section1{
     margin-top: 2.5%;
     border: none;
     border-width: thin;
-    border-radius: 1.5em;
+    border-radius: 2em;
     background-color: #F2F2F2;
-    padding: 0.1em 2em 6em 2em;
-    width: 55em;
+    padding: 2rem;
+}
+.section1{
+    display: grid;
+    column-gap: 2rem;
+    row-gap: 2rem;
+    grid-template-columns: repeat(3, 1fr);
 }
 #hebergement{
-    padding-left: 3%;
-    margin-bottom: 3%;
-    font-size: 1.5em;
+    font-size: 1.5rem;
+    grid-column: 1/-1;
+    margin: 0;
 }
 .section1 img{
-    border-top-left-radius: 1.7em;
-    border-top-right-radius: 1.7em;
-    width: 15em;
-    height: 7em;
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+    height: 7rem;
     object-fit: cover;
+    max-width: 100%;
+    width: 100%;
+    max-height: 100%;
 }
 
 .cannebiere{
     background-color: white;
     padding: 5px;
     border: none;
-    border-radius: 1.7em;
+    border-radius: 2rem;
     box-shadow: 1px 1px 4px grey;
+    height: 100%;
 }
 
 .mer{
     background-color: white;
     padding: 5px;
     border: none;
-    border-radius: 1.7em;
+    border-radius: 2rem;
     margin-bottom: 6%;
     box-shadow: 1px 1px 4px grey;
 }
@@ -195,24 +204,18 @@ article{
     display: flex;
     justify-content: space-around;
 }
-#hb{
-    display: flex;
-    justify-content: space-around;
-    padding-top: 2.5em;
-}
-#colori{
+
+.starblue{
     color: #0065FC;
-    float: left;
-    margin-right: 2%;
+    font-size: 1rem;
 }
 
-#grey i{
+.stargrey{
     color: #e3e3e3;
+    font-size: 1rem;
 }
 .txt{
-    padding-left: 6%;
-    padding-bottom: 3%;
-    padding-top: 1%;
+    padding: 0.5rem;
 }
 .texte{
     font-weight: bold;
@@ -223,70 +226,58 @@ article{
     padding-left: 3%;
     padding-top: 5%;
     font-weight: bold;
-    font-size: 1.3em;
+    font-size: 1.3rem;
 }
 aside{
-    margin-top: 1.7%;
-    margin-left: 3%;
+    margin-top: 1.5rem;
     border: none;
     border-width: thin;
-    border-radius: 1.5em;
+    border-radius: 2rem;
     background-color: #F2F2F2;
-    padding: 0.1em 2em 0.1em 2em;
-    width: 55em;
+    padding: 2rem;
+    display: grid;
+    row-gap: 2rem;
+    align-items: start;
+    grid-template-rows: auto repeat(3, 1fr);
 }
-aside img{
-    border-top-left-radius: 1.7em;
-    border-bottom-left-radius: 1.7em;
-    width: 10em;
-    height: 10em;
+.image-popu{
+    border-top-left-radius: 2rem;
+    border-bottom-left-radius: 2rem;
+    width: 10rem;
+    height: 10rem;
     object-fit: cover;
     
 }
-#populaires{
-    font-size: 1.5em;
-}
-.popu{
+.populaires{
+    font-size: 1.5rem;
     display: flex;
+    margin: 0;
+    font-weight: bold;
     justify-content: space-between;
-    margin-bottom: -4.7%;
 }
-.fas.fa-chart-line{
-    font-size: 2em;
-    margin-top: 6%;
-}
+
 .soleil{
     background-color: white;
     border: none;
-    border-radius: 1.7em;
-    padding: 0px 0px 1.1% 1.7%;
-    margin-bottom: 5%; /*à changer à la fin*/
+    border-radius: 2rem;
+    padding: 0.380rem;
     box-shadow: 1px 1px 4px rgb(175, 171, 171);
 }
 .soleil img{
-    padding-top: 6.5px;
     float: left;
+}
+.popucontent {
+    margin-left: 11rem;
 }
 .bol{
     display: block;
     font-weight: bold;
-    font-size: 1.3em;
-    padding-left: 49%;
+    font-size: 1.3rem;
     margin-bottom: 2%;    
-}
-.nuit{
-    padding-left: 5%;
-}
-.popucontent{
-    padding-top: 6%;
-    padding-right: 13%;
 }
 
 .star{
-    display: -webkit-box;
-    margin-left: 50%;
     padding-top: 3.5%;
-    padding-bottom: 5%;
 }
 #section2{
     margin-bottom: 7%;
@@ -382,8 +373,10 @@ footer{
        border-color: none;
     }
     .allm{
-        flex-direction: column;
-        flex-flow: column-reverse;
+        grid-template-columns: 1fr;
+    }
+    aside{
+        grid-row-start: 1;
     }
     #content{
         flex-direction: column;
@@ -411,11 +404,8 @@ footer{
         background-color: #ffffff;
         margin: auto;
     }
-    .section1 img{
-        width: 56.5em;
-        height: 20em;
-        border-top-left-radius: 1.7em;
-        border-top-right-radius: 1.7em;
+    .section1 {
+        grid-template-columns: 1fr;
        }
     ul.puce li{
         font-size: 2.5em;
@@ -591,7 +581,7 @@ footer{
         padding-bottom: 0;
         padding-top: 10%;
     }
-    #colori{
+    .starblue{
         padding-bottom: 2em;
     }
     aside h1{
@@ -611,15 +601,11 @@ footer{
     .size{
         font-size: 1.5em;
     }
-    .etoilesT{
-        font-size: 1.6em;
-        padding-top: 10px;
-    }
-    .etoilesG{
+    .stargrey{
     font-size: 1.6em;
     padding-top: 10px;
     }
-    #colori{
+    .starblue{
         margin-right: 1%;
     }
     .mer{
