--- a/style.css
+++ b/style.css
@@ -19,20 +19,18 @@ body{
     width: 140px;
     height: 60px;
 }
-ul{
-    list-style: none;
-    padding: 0px;
-}
 #blo {
     display: flex;
 }
 .puce{
     margin-left: 62%;
-    padding-top: 2%;
+    margin-top: 3.1%;
     display: flex;
+    list-style: none;
+    padding: 0px;
         
 }
-ul.puce li{
+.puce li{
     display: inline;
     margin-left: 50%;
     font-weight: bold;
@@ -407,7 +405,7 @@ footer{
     .section1 {
         grid-template-columns: 1fr;
        }
-    ul.puce li{
+    .puce li{
         font-size: 2.5em;
         margin-left: 0;
     }
