--- a/style.css
+++ b/style.css
@@ -35,8 +35,12 @@ body{
     margin-left: 50%;
     font-weight: bold;
 }
+.hov{
+    margin-left: 6rem;
+}
 .puce a{
     text-decoration: none;
+    font-weight: bold;
 }
 .bcolor{
     color: black;
@@ -48,6 +52,7 @@ body{
 }
 #ins{
     color: #0065FC;
+    margin-left: 7rem;
 }
 #titre_principal h1{
     font-size: 1.6em;
@@ -117,7 +122,7 @@ body{
     padding-bottom: 18px;
     padding-left: 20px;
 }
-.filtre li{
+.filtre #ecopuce, #alois, .rom, .pet{
     margin-left: 40px;
     border:solid;
     border-width: 2px;
