--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ body{
     border-width: thin;
     padding: 0.9%;
     background-color: #0065FC;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-top-right-radius: 1.3rem;
+    border-bottom-right-radius: 1.3rem;
     font-weight: bold;
     font-size: 1.2rem;
     border: none;
@@ -507,11 +507,6 @@ footer{
         width: 90%;
         margin: auto;
     }
-    .search #gps1{
-        padding: 5% 4% 3% 3%;
-        border-bottom-left-radius: 30px;
-        border-top-left-radius: 30px;
-    }
     .fas.fa-map-marker-alt{
         font-size: 190%;
     }
@@ -562,11 +557,6 @@ footer{
     #dans{
         padding-left: 4em;
     }
-    aside{
-        border-radius: 0;
-        margin-left: 1%;
-        padding-bottom: 4em;
-    }
     aside img {
         width: 20em;
         height: 17em;
@@ -575,30 +565,15 @@ footer{
     #populaires {
         font-size: 3em;
     }
-    .fas.fa-chart-line {
-        font-size: 3em;
-        margin-top: 8%;
-    }
     .soleil{
         margin-bottom: 0;
         width: 90%;
         margin: auto;
     }
-    .bol{
-        font-weight: 900;
-        padding-left: 60%;
-        font-size: 1.58em;
-    }
-    .nuit{
-        padding-left: 13.5%;
-    }
     .star{
         margin-left: 60%;
         padding-bottom: 0;
         padding-top: 10%;
-    }
-    .starblue{
-        padding-bottom: 2em;
     }
     aside h1{
         font-size: 3em;
@@ -617,13 +592,6 @@ footer{
     .size{
         font-size: 1.5em;
     }
-    .stargrey{
-    font-size: 1.6em;
-    padding-top: 10px;
-    }
-    .starblue{
-        margin-right: 1%;
-    }
     .mer{
         width: 88%;
         margin: auto;
@@ -635,25 +603,11 @@ footer{
     #section2{
         width: 90%;
         margin: auto;
-    }
-    #pic{
-        width: 95%;
-        margin: auto;
-        border-radius: 1.5em;
-    }
+    }   
     
-    #pic img{
-        width: 51.5em;
-        height: 18em;
-    }
     #pic p{
         font-size: 1.6em;
-    }
-    .grand {
-        margin-bottom: 3em;
-        padding-bottom: 5%;
-    }
-    
+    }    
     #fort, #frioul, .dame, .longchamp{
         margin-bottom: 5%;
     }
@@ -671,22 +625,56 @@ footer{
         width: 98%;
     }
 }
-    @media screen and (min-width: 650px)
+    @media screen and (min-width: 800px)
 {
     .button-rechercher {
     display: block;
     }
     .loupe{
-        display: none !important;
+        display: none !important;  
     }
 }
-    @media screen and (max-width: 650px)
+    @media screen and (max-width: 800px)
 {    
     .button-rechercher {
     display: none !important;
     }
     .loupe{
-        display: block;
+        padding: 1rem;     
+    }
+    .button-search{
+        border-radius: 1.3rem;
+    }
+    .search #gps1{
+        font-size: 1.2rem;
+    }
+    aside{
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: none;
+        width: 100%;
+        border-radius: 0;
+    }
+    .nuit{
+        padding-bottom: 1rem;
+    }
+    .section1{
+        grid-template-columns: repeat(1, 1fr);
+        background-color: white;
+    }
+    .section1 img{
+        height: 10rem;
+    }
+    #pic{
+        flex-direction: column;
+        width: 100%;
+        border-radius: 1.5rem;
+    }
+    #pic img{
+        width: 100%;
+        height: 14em;
+    }
+    .grand{
+        margin-bottom: 3rem;
     }
 }
     
