--- a/style.css
+++ b/style.css
@@ -541,13 +541,9 @@ footer{
     }
     
     .loge{
-        width: 90%;
+        width: 100%;
         margin: auto;
         padding-bottom: 5em;
-    }
-    #log1{
-        font-size: 14.5px;
-        padding-left: 2%;
     }
     .fa-info:before {
         content: "\f129";
@@ -648,11 +644,17 @@ footer{
     .search #gps1{
         font-size: 1.2rem;
     }
+    .fa-info:before {
+        padding: 0.7rem 1rem;
+        font-size: 1rem;
+    }
     aside{
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: none;
-        width: 100%;
         border-radius: 0;
+    }
+    .soleil{
+        width: 100%;
     }
     .nuit{
         padding-bottom: 1rem;
@@ -675,6 +677,16 @@ footer{
     }
     .grand{
         margin-bottom: 3rem;
+    }
+    .cannebiere, .mer{
+        width: 100%;
+        height: 100%;
+    }
+    #titre_principal p {
+        font-size: 1.2em;
+    }
+    #foot li{
+        font-size: 1rem;
     }
 }
     
