--- a/style.css
+++ b/style.css
@@ -21,20 +21,19 @@ body{
 .title-head{
     display: flex;
 }
-.puce{
-    margin-left: 45rem;
+#blo{
+    margin-left: 43rem;
     margin-top: 2rem;
     display: flex;        
 }
-.puce li{
-    display: inline;
-    margin-left: 50%;
-    font-weight: bold;
+.inscrip{
+    margin-top: 2rem;
+    width: 100%;
 }
 .hov{
     margin-left: 6rem;
 }
-.puce a{
+#blo a, .inscrip a{
     text-decoration: none;
     font-weight: bold;
 }
@@ -48,7 +47,7 @@ body{
 }
 #ins{
     color: #0065FC;
-    margin-left: 7rem;
+    margin-left: 40%;
 }
 #titre_principal h1{
     font-size: 1.6em;
@@ -125,7 +124,7 @@ body{
     padding-left: 1.2rem;
 }
 .filtres-puce{
-    margin-left: 3rem;
+    margin-left: 2%;
     border:solid;
     border-width: 2px;
     border-color: #F2F2F2;
@@ -303,12 +302,12 @@ aside{
     font-size: 1.5em;
 }
 #pic{
-    display: flex;
-    justify-content: space-between;
-    object-fit: cover;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 2rem;
 }
 #pic img{
-    width: 20rem;
+    width: 100%;
     border-top-left-radius: 1.5rem;
     border-top-right-radius: 1.5rem;
     object-fit: cover;
@@ -362,6 +361,11 @@ aside{
     padding-bottom: 5%;
     
 }
+.link-act{
+    text-decoration: none;
+    color: black;
+    height: 50%;
+}
 footer{
     margin: auto;
     width: 87%;
@@ -385,10 +389,10 @@ footer{
 }
 @media screen and (max-width: 1440px) {
     #bloc-page{
-        width: 80rem;
+        width: 100%;
     }
-    .puce{
-        margin-left: 32rem;
+    #blo{
+        margin-left: 40%;
     }
     .allm{
         grid-template-columns: 1fr;
@@ -401,12 +405,40 @@ footer{
         grid-template-rows: auto 10rem;
         column-gap: 2rem;
         grid-row-start: 1;
-        width: min(90%, 75rem);
     }
-    .section1 {
-        width: min(90%, 75rem);
-       }
+    .bol{
+        font-size: 1.2rem;
+    }
+    .popucontent{
+        margin-left: 0;
+    }
+    .image-popu{
+        width: 45%;
+    }
+    footer{
+        width: 100%;
+    }   
 }
+@media screen and (max-width: 1330px){
+    #pic{
+        grid-template-columns: repeat(2, 1fr);
+        grid-row-gap: 2rem;
+    }
+    #port-marg{
+        margin-top: 19%;
+    }
+    .grand img{
+        height: 20rem;
+    }
+    #fort, .dame{
+        margin-bottom: 4%;
+    }
+    #fort img, #frioul img{
+        height: 10rem;
+    }
+
+}
+
 @media all and (max-width: 1025px)
 {
     #bloc-page{
@@ -418,7 +450,6 @@ footer{
         width: unset;
         float: none;
     }
-    
     #content{
         flex-direction: column;
     }
@@ -441,11 +472,11 @@ footer{
         background-color: #ffffff;
         margin: auto;
     }
-    .puce li{
+    #blo li{
         font-size: 2.5em;
         margin-left: 0;
     }
-    .puce{
+    #blo{
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -667,6 +698,7 @@ footer{
     }
     .section1 img{
         height: 10rem;
+        width: 100%;
     }
     #pic{
         flex-direction: column;
@@ -706,7 +738,7 @@ footer{
         padding-top: 7px;
         float: none;
     }
-    .puce{
+    #blo{
         padding-top: 0;
     }
     .search-bar{
@@ -727,15 +759,38 @@ footer{
     }
     .popucontent{
         height: 100%;
+        margin-left: 15rem;
     }
     .loge{
         padding-left: 2rem;
+        padding-bottom: 2rem;
     }
     #log1{
         font-size: 1.2rem;
     }
+    #ins{
+        margin-left: 0;
+    }
+    .hov{
+        margin-left: 0;
+    }
+    #medact{
+        padding-right: 15%;
+    }
     .inscrip{
-        
+        width: 10%;
+    }
+    #pic{
+        grid-template-columns: repeat(1, 1fr);
+        width: 90%;
+        margin: auto;
+    }
+    .image-popu{
+        width: 13rem;
+        height: 12rem;
+    }
+    #fort, #frioul, .dame, .longchamp {
+        margin-bottom: 15%;
     }
 }
     
