--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body{
     display: grid;
     column-gap: 2rem;
     grid-template-columns: 6fr 3fr;
-
+    margin-bottom: 7rem;
 }
 
 .section1{
